--- a/dropcaps.yaml
+++ b/dropcaps.yaml
@@ -2,8 +2,12 @@
 
 enabled: true                 # Set to false to disable this plugin completely
 built_in_css: true            # Use built-in CSS of the plugin
-weight: -5                    # Set the weight (order of executing)
+weight: -5                    # Set the weight (order of execution)
 
 # Global and page specific configurations
 
 process: true                 # Toggle to process drop-caps on the page or not
+titling:
+  enabled: false              # Toggle to (de-)activate titling of text
+  first_line: true            # Highlight first line of paragraph
+  breakpoints: ".,!?'\"-"     # Specify which characters will end titling
