:hotsprings: Fixed self-closing tags and ensure to return valid HTML(5)

--- a/dropcaps.yaml
+++ b/dropcaps.yaml
@@ -10,4 +10,4 @@ process: true                 # Toggle to process drop-caps on the page or not
 titling:
   enabled: false              # Toggle to (de-)activate titling of text
   first_line: true            # Highlight first line of paragraph
-  breakpoints: ".,!?'\"-"     # Specify which characters will end titling
+  breakpoints: ".,:;!?'\"-"   # Specify which characters will end titling
