--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -6,7 +6,7 @@ author:
   name: Sommerregen
   email: sommerregen@benjamin-regler.de
 homepage: https://github.com/sommerregen/grav-plugin-dropcaps
-keywords: drop caps, filter, formatter, letter, pages, posts, typography, plugin
+keywords: [drop caps, filter, formatter, letter, pages, posts, typography, plugin]
 docs: https://github.com/sommerregen/grav-plugin-dropcaps/blob/master/README.md
 bugs: https://github.com/sommerregen/grav-plugin-dropcaps/issues
 license: MIT
