--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -16,38 +16,38 @@ form:
   fields:
     global:
       type: section
-      title: "Global plugin configurations"
+      title: PLUGINS.DROPCAPS.GLOBAL_CONFIG
       underline: 1
 
       fields:
         enabled:
           type: toggle
-          label: "Plugin Status"
+          label: PLUGINS.DROPCAPS.PLUGIN_STATUS
           highlight: 1
           default: 0
           options:
-            1: Enabled
-            0: Disabled
+            1: PLUGIN_ADMIN.ENABLED
+            0: PLUGIN_ADMIN.DISABLED
           validate:
             type: bool
 
         built_in_css:
           type: toggle
-          label: "Use built in CSS"
+          label: PLUGINS.DROPCAPS.BUILTIN_CSS
           highlight: 1
           default: 1
           options:
-            1: "Yes"
-            0: "No"
+            1: PLUGIN_ADMIN.YES
+            0: PLUGIN_ADMIN.NO
           validate:
             type: bool
 
         weight:
           type: text
           size: x-small
-          label: "Order of execution"
+          label: PLUGINS.DROPCAPS.WEIGHT
           default: -5
-          help: "To process contents right after *SmartyPants* use negative values."
+          help: PLUGINS.DROPCAPS.WEIGHT_HELP
           validate:
             type: int
             min: -100
@@ -55,44 +55,44 @@ form:
 
     default:
       type: section
-      title: "Global and page specific configurations"
+      title: PLUGINS.DROPCAPS.SPECIFIC_CONFIG
       underline: 1
 
       fields:
         process:
-          type: toggle
-          label: "Activate <code>DropCaps</code> filter per page"
+          type: hidden
+          label: PLUGINS.DROPCAPS.PROCESS
           highlight: 1
           default: 1
           options:
-            1: "Yes"
-            0: "No"
+            1: PLUGIN_ADMIN.YES
+            0: PLUGIN_ADMIN.NO
           validate:
             type: bool
 
         titling.enabled:
           type: toggle
-          label: "Enable titling of text"
+          label: PLUGINS.DROPCAPS.TITLING
           default: 0
           options:
-            1: "Yes"
-            0: "No"
+            1: PLUGIN_ADMIN.YES
+            0: PLUGIN_ADMIN.NO
           validate:
             type: bool
 
         titling.first_line:
           type: toggle
-          label: "Highlight first line of text"
+          label: PLUGINS.DROPCAPS.FIRST_LINE
           default: 0
           options:
-            1: "Yes"
-            0: "No"
+            1: PLUGIN_ADMIN.YES
+            0: PLUGIN_ADMIN.NO
           validate:
             type: bool
 
         titling.breakpoints:
           type: text
           size: x-small
-          label: "Characters to mark end of titling"
-          help: "Specify which characters will end titling"
+          label: PLUGINS.DROPCAPS.BREAKPOINTS
+          help: PLUGINS.DROPCAPS.BREAKPOINTS_HELP
           default: ".:;!?'\"-"
