--- a/languages.yaml
+++ b/languages.yaml
@@ -10,7 +10,7 @@ de:
       WEIGHT: "Ausführungsreihenfolge"
       WEIGHT_HELP: "Setze negative Werte um das Plugin direkt nach *SmartyPants* ausführen zu lassen."
 
-      PROCESS: "<code>DropCaps</code> Filter auf der Seite aktivieren"
+      PROCESS: "Aktiviere <code>DropCaps</code> auf Seite"
       TITLING: "Text in Titelzeile setzen"
       FIRST_LINE: "Erste Zeile hervorheben"
 
@@ -29,7 +29,7 @@ en:
       WEIGHT: "Order of execution"
       WEIGHT_HELP: "To process contents right after *SmartyPants* use negative values."
 
-      PROCESS: "Activate <code>DropCaps</code> filter per page"
+      PROCESS: "Activate <code>DropCaps</code> filter on the page"
       TITLING: "Enable titling of text"
       FIRST_LINE: "Highlight first line of text"
 
